cmake_minimum_required(VERSION 3.19)
project(Structures)
set(CMAKE_CXX_STANDARD 17)
add_executable(Structures main.cpp scratch/ADT/ADT.cpp scratch/ADT/ADT.h util/ArrayInstance.cpp util/ArrayInstance.h scratch/Matricies/Matrices.cpp scratch/Matricies/Matrices.h STL/STL.h STL/Containers.h scratch/LinkedList/LinkedList.cpp scratch/LinkedList/LinkedList.h scratch/CircularLinkedList/CircularLinkedList.cpp scratch/CircularLinkedList/CircularLinkedList.h scratch/Stack/Stack.cpp scratch/Stack/Stack.h scratch/Stack/Stack.cpp scratch/Stack/Stack.h)